--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^17.0.5",
     "lodash": "^4.17.21",
     "rc-notification": "^5.0.0-alpha.8",
+    "rc-table": "^7.24.2",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.3.0",
     "react-spinners": "^0.11.0",
