--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@banksea-finance/ui-kit",
   "author": "banksea-finance",
   "private": false,
-  "version": "0.0.1-beta.21",
+  "version": "0.0.1-beta.23",
   "license": "MIT",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -32,6 +32,8 @@
     "@types/react": "^17.0.5",
     "lodash": "^4.17.21",
     "rc-notification": "^5.0.0-alpha.8",
+    "rc-pagination": "^3.1.17",
+    "rc-select": "^14.1.8",
     "rc-table": "^7.24.2",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.3.0",
