--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@banksea-finance/ui-kit",
   "author": "banksea-finance",
   "private": false,
-  "version": "0.0.1-beta.37",
+  "version": "0.0.1-beta.38",
   "license": "MIT",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -10,6 +10,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": "https://github.com/banksea-finance/ui-kit.git",
   "scripts": {
     "start": "yarn storybook",
